[package]
name = "pngtuberultra"
version = "0.1.0"
description = "PNGTuberUltra — open-source PNGTuber app with webcam tracking and a serious rigging editor"
authors = ["PNGTuberUltra contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pngtuberultra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cross-platform global keyboard hook for phase 9c. Listens to OS-level
# input events so rigs react when the Tauri window is unfocused — the
# canonical "PNGTuber while playing a game" scenario.
#  - Windows: works out of the box.
#  - macOS:   requires Accessibility permission (System Settings →
#             Privacy & Security → Accessibility). Without it
#             rdev::listen returns an error which we surface to the
#             frontend and fall back to local listeners.
#  - Linux:   X11 supported; Wayland is degraded (rdev limitation).
rdev = "0.5"

